Fix vertical alignment of sidebar on Support page

--- a/docs/src/css/all.scss
+++ b/docs/src/css/all.scss
@@ -180,6 +180,9 @@ img {
 			border: 1px solid $img-hover-border;
         }			
     }
+	&.context-logo {
+		margin: 20px 0 4px;
+	}
 }
 
 code{
